--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@types/styled-components": "^5.1.26",
     "axios": "^1.1.3",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
