--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-toastify": "^4.1.0",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.1.3",
     "prettier": "^2.7.1",
